# AED-Project1

./: .gitignore  CMakeLists.txt  Class.cpp  Class.h  Data.cpp  Data.h  Lecture.cpp  Lecture.h  Notas.txt  Pedido.h  Request.cpp  Request.h  Student.cpp  Student.h  UC.cpp  UC.h  UCClass.cpp  UCClass.h  main.cpp
